fix(style): improve post readability

--- a/src/components/post/content.module.scss
+++ b/src/components/post/content.module.scss
@@ -10,8 +10,9 @@
 
     ol,
     ul {
+        padding-inline-start: 30px;
         li {
-            padding: 10px 0;
+            line-height: 2.5rem;
         }
     }
 
@@ -19,12 +20,8 @@
         background-color: lighten($color: $darkBg, $amount: 10);
         font-style: italic;
         margin: 1.5em 0;
-        padding: 2em 25px;
+        padding: 10px 20px;
         quotes: "\201C""\201D""\2018""\2019";
-
-        p {
-            display: inline;
-        }
     }
 
     video {
