--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,7 @@ h1 {
 
 h2 {
     font-size: 1.75rem;
+    line-height: 2.5rem;
 }
 
 h3 {
